src/objects/BypassTriggersValidations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bypassing triggers and validation rules for specific users/profiles</description>
    <fields>
        <fullName>DisableTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disabling Triggers</description>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableValidations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disabling Validation rules</description>
        <label>Disable Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerObjects__c</fullName>
        <description>Stores Trigger Objects like lead/Opportunity/Account/Task for which we need to bypass.</description>
        <label>Trigger Objects</label>
        <type>TextArea</type>
    </fields>
    <label>BypassTriggersValidations</label>
</CustomObject>